Fix the map control in the Elementor widget for the event venue. Ensure it applies to both maps. ALso: add overflow hidden to the map container to prevent the map from overflowing the container when border radius is applied.

--- a/src/resources/postcss/integrations/plugins/elementor/widgets/venue.pcss
+++ b/src/resources/postcss/integrations/plugins/elementor/widgets/venue.pcss
@@ -79,6 +79,13 @@
 			margin: 0;
 		}
 
+		.tec-events-elementor-event-widget__venue-map {
+			flex: 1 1 50%;
+			margin: 0;
+			overflow: hidden;
+			padding: 0;
+		}
+
 		.tec-events-elementor-event-widget__venue-address-map-link {
 			margin: -var(--tec-spacer-3) 0 var(--tec-spacer-3) 0;
 		}
@@ -103,11 +110,5 @@
 				padding-bottom: var(--tec-spacer-2);
 			}
 		}
-	}
-
-	.tec-events-elementor-event-widget__venue-map {
-		flex: 1 1 50%;
-		margin: 0;
-		padding: 0;
 	}
 }
